--- a/application/views/main/master.html
+++ b/application/views/main/master.html
@@ -36,6 +36,8 @@ $def with (page)
                     $elif page.privilege == '0':
                         <li class='active'><a href="/"><span class="glyphicon glyphicon-user"></span> $page.username </a></li>
                         <li><a href="/users">Users</a></li>
+                        <li><a href="/Productos">Productos</a></li>
+                        <li><a href="/Clientes">Clientes</a></li>
                         <li><a href="/logs">Logs</a></li>
                         <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 
