--- a/application/views/main/master.html
+++ b/application/views/main/master.html
@@ -44,6 +44,8 @@ $def with (page)
                     $elif page.privilege == '1':
                         <li class='active'><a href="/"><span class="glyphicon glyphicon-user"></span> $page.username </a></li>
                         <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                        <li><a href="/productos">Productos</a></li>
+                        <li><a href="/clientes">Clientes</a></li>
                 </ul>
             </div>
         </div>
